--- a/client/views/postList.html
+++ b/client/views/postList.html
@@ -105,7 +105,7 @@ Duncan Robertson. Student number: 8074833 -->
         })
         .then((posts) => {
           var postsContent = posts;
-          $("#link" + id + j).attr('href', '/post/' + postsContent[j].ID);
+          $("#link" + id + j).attr('href', '/client/views/postDetails.html?id=' + postsContent[j].ID)
           $('#thumbnail' + id + j).attr("src","../img/instagram_img/" + postsContent[j].image);
          
           var postid = postsContent[j].ID;
@@ -209,6 +209,7 @@ Duncan Robertson. Student number: 8074833 -->
       $(function(){
         $("#footer").load("../templates/footer.html"); 
       });
+      
       </script> 
       
       <!-- Copyrights Section -->
