--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -1,16 +1,18 @@
-<!-- Group information:
-
-Student 1:
-
-Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
-
-Student 2:
-
-Chi Hieu Tran (a.k.a Winson). Student number: 7822620
-
-Student 3:
-
-Duncan Robertson. Student number: 8074833 -->
+<!-- 
+  Group information:
+  
+  Student 1:
+  
+  Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
+  
+  Student 2:
+  
+  Chi Hieu Tran (a.k.a Winson). Student number: 7822620
+  
+  Student 3:
+  
+  Saurav Bedi. Student number: 7832124 
+-->
 
 <!DOCTYPE HTML>
 <html>
@@ -23,56 +25,54 @@ Duncan Robertson. Student number: 8074833 -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 		<link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
 	    <script src="../js/jquery-3.2.1.min.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
+	    <script src="../js/bootstrap.min.js"></script>
 		<script>
-            /*global $*/
-            $(document).ready( ()=> {
-              $('#resetForm').submit( ()=> {
-                var email = $('#email').val();
-                var password = $('#password').val();
-                var repeatPassword = $('#repeat_password').val();
-                var error = '';
-                	var regex = /^[a-z A-Z 0-9]+$/;
-                	if (regex.test(email)) {
-	                	error += 'Invalid email!'
-	                	$('#error').html(error);
-	                } else if (password.length == 0) {
-	                	error += 'Please enter your new password!'
-	                	$('#error').html(error);
-	                } else if (password.length < 6) {
-	                	error += 'New password must include at least 6 characters!'
-	                	$('#error').html(error);
-	                } else if (repeatPassword.length == 0) {
-	                	error += 'Please confirm your password!'
-	                	$('#error').html(error);
-	                } else if (repeatPassword.length < 6) {
-	                	error += 'Confirm password must include at least 6 characters!'
-	                	$('#error').html(error);
-	                } else if (password != repeatPassword) {
-	                	error += 'New password and confirm password do not match!'
-	                	$('#error').html(error);
-	                } else {
-	                	Promise.resolve()
-	                    .then(function(){
-	                        return $.post('/server/server.php', 'type=sendEmail' + '&email=' + email + '&password=' + password);
-	                    })
-	                    .then(function(data){
-	                    	if(!data.isValid)
-	                    	{
-	                    		  $('#error').html(data.message);
-	                    	}
-	                    })
-	                    .catch(e => {
-	                       $('#error').html("Your Account has been reset! </br> Please check your email to confirm");
-	                       $('#error').css('color','#ffffff');
-	                       $('#desc').addClass('hide');
-	                       $('#resetForm').addClass('hide');
-	                    });
-	                    
-                	}
-            	});
-            });
-        </script>
+	        /*global $*/
+	        $(document).ready( ()=> {
+				$('#resetForm').submit( ()=> {
+					var email = $('#email').val();
+					var password = $('#password').val();
+					var repeatPassword = $('#repeat_password').val();
+					var error = '';
+					var regex = /^[a-z A-Z 0-9]+$/;
+					if (regex.test(email)) {
+				    	error += 'Invalid email!'
+				    	$('#error').html(error);
+				    } else if (password.length == 0) {
+				    	error += 'Please enter your new password!'
+				    	$('#error').html(error);
+				    } else if (password.length < 6) {
+				    	error += 'New password must include at least 6 characters!'
+				    	$('#error').html(error);
+				    } else if (repeatPassword.length == 0) {
+				    	error += 'Please confirm your password!'
+				    	$('#error').html(error);
+				    } else if (repeatPassword.length < 6) {
+				    	error += 'Confirm password must include at least 6 characters!'
+				    	$('#error').html(error);
+				    } else if (password != repeatPassword) {
+				    	error += 'New password and confirm password do not match!'
+				    	$('#error').html(error);
+				    } else {
+						Promise.resolve()
+					    .then(function() {
+					        return $.post('/server/server.php', 'type=sendEmail' + '&email=' + email + '&password=' + password);
+					    })
+					    .then(function(data) {
+					    	if(!data.isValid) {
+					    		  $('#error').html(data.message);
+					    	}
+					    })
+						.catch(e => {
+				        	$('#error').html("Your Account has been reset! </br> Please check your email to confirm");
+					        $('#error').css('color','#ffffff');
+					        $('#desc').addClass('hide');
+					        $('#resetForm').addClass('hide');
+					    });
+					}	
+				});
+	        });
+	    </script>
 	</head>
 	<body>
 		<div class="elelment">
