--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,16 +1,18 @@
-<!-- Group information:
-
-Student 1:
-
-Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
-
-Student 2:
-
-Chi Hieu Tran (a.k.a Winson). Student number: 7822620
-
-Student 3:
-
-Duncan Robertson. Student number: 8074833 -->
+<!-- 
+  Group information:
+  
+  Student 1:
+  
+  Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
+  
+  Student 2:
+  
+  Chi Hieu Tran (a.k.a Winson). Student number: 7822620
+  
+  Student 3:
+  
+  Saurav Bedi. Student number: 7832124 
+-->
 
 <!DOCTYPE html>
 <html>
@@ -29,19 +31,19 @@ Duncan Robertson. Student number: 8074833 -->
   
     <!-- JavaScript to load the contents of the page -->
     <script>
-    /*global $*/
+      /*global $*/
       // Function to load the contents of the page
       function loadPage() {
         Promise.resolve()
         
         //check session
-        .then(function(){
-             return  $.post ('/server/session.php', 'type=checkSession');
+        .then(function() {
+            return  $.post ('/server/session.php', 'type=checkSession');
          })
          .then(function(auth){
-              if(!auth.isValid) {
-                    window.location.replace('loginAndRegistration.html');
-                } 
+            if(!auth.isValid) {
+                  window.location.replace('loginAndRegistration.html');
+            } 
          })
         .then(() => {
           return $.post('/server/getUserProfile.php');
@@ -58,19 +60,19 @@ Duncan Robertson. Student number: 8074833 -->
       }
       
       // Function to set the user profile
-      function setUserProfile(post){
+      function setUserProfile(post) {
         var userProfile = post[0];
         $('#displayName').html(userProfile.displayName);
         $('#profileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
         $('#postCount').html(userProfile.postsCount);
         $('#followerCount').html(userProfile.followersCount);
         $('#followingCount').html(userProfile.followingCount);
-          addUserGallery(userProfile, userProfile.postsCount);
-          setUserGalleryContent(userProfile);
+        addUserGallery(userProfile, userProfile.postsCount);
+        setUserGalleryContent(userProfile);
       }
       
       // Function to add Gallery of user recent post to the Gallery Container
-      function addUserGallery(userProfile, postsCount){
+      function addUserGallery(userProfile, postsCount) {
         $('#galleryContainer').append('<div class="gallery">\
           <div class="gallery_upper">\
             <img src="" height="50px" class="profile" id="userProfileImage">\
@@ -83,25 +85,23 @@ Duncan Robertson. Student number: 8074833 -->
           <div id="postContainer0">\
           </div>\
         </div>');
-        if(postsCount <= 4){
+        if(postsCount <= 4) {
           addUserPosts(userProfile, postsCount);
         } else {
           addUserPosts(userProfile, 4);
         }
       }
       
-      
       // Function to set content of User Upper Gallery
-      function setUserGalleryContent(userProfile){
+      function setUserGalleryContent(userProfile) {
         $('#userProfileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
         $('#userProfileUsername').html(userProfile.userName);
         $('#userProfileFullName').html(userProfile.displayName);
       }
       
       // Function to add user Recent Posts html to Post Container
-      function addUserPosts(userProfile, postsCount){
-        if(postsCount == 0)
-        {
+      function addUserPosts(userProfile, postsCount) {
+        if(postsCount == 0) {
           $('#postContainer0').append('<h4>There is no post to display</h4>');
         } else {
           for (var j = 0; j < postsCount; j++) {
@@ -124,16 +124,16 @@ Duncan Robertson. Student number: 8074833 -->
       }
       
       // Function to set the top profiles
-      function setTopProfiles(posts){
+      function setTopProfiles(posts) {
         var topProfiles = posts;
         for (var i = 0; i < topProfiles.length; i++) {
-            addGallery(topProfiles, i);
-            setGalleryContent(topProfiles, i);
+          addGallery(topProfiles, i);
+          setGalleryContent(topProfiles, i);
         } 
       }
       
       // Function to add Gallery html to the Gallery Container
-      function addGallery(topProfiles, i){
+      function addGallery(topProfiles, i) {
         $('#galleryContainer').append('<div class="gallery">\
           <div class="gallery_upper">\
             <img src="" height="50px" class="profile" id="topProfileImage' + i + '">\
@@ -148,13 +148,13 @@ Duncan Robertson. Student number: 8074833 -->
           </div>\
         </div>');
         
-         $('#follow' + topProfiles[i].ID).attr('onclick','followerClick("follow' + topProfiles[i].ID + '", "' + topProfiles[i].ID + '")');
+        $('#follow' + topProfiles[i].ID).attr('onclick','followerClick("follow' + topProfiles[i].ID + '", "' + topProfiles[i].ID + '")');
         isFollow("follow" +topProfiles[i].ID , topProfiles[i].ID );
         addPosts(topProfiles, i);
       }
     
       // Function to add Posts html to Post Container
-      function addPosts(topProfiles, i){
+      function addPosts(topProfiles, i) {
         for (var j = 0; j < 4; j++) {
           $('#postContainer' + topProfiles[i].ID).append('<div class="thumbnail">\
               <a href="" id="link' + topProfiles[i].ID + j + '">\
@@ -174,34 +174,30 @@ Duncan Robertson. Student number: 8074833 -->
       }
     
       // Function to set content of Upper Gallery
-      function setGalleryContent(topProfiles, i){
+      function setGalleryContent(topProfiles, i) {
         $('#topProfileImage' + i).attr("src","../img/profile_img/" + topProfiles[i].imageProfile);
         $('#topProfileUsername' + i).html(topProfiles[i].userName);
         $('#topProfileFullName' + i).html(topProfiles[i].displayName);
       }
     
       // Function to set content of Posts
-      function setPostsContent(id, j, check){
+      function setPostsContent(id, j, check) {
         Promise.resolve()
         .then(() => {
           return $.post('/server/getPostsContent.php', {id: id, max: 4});
         })
         .then((posts) => {
           var postsContent = posts;
-          if(postsContent.length == 0)
-          {
+          if(postsContent.length == 0) {
             $('#postContainer' + id).addClass('hide');
           } else {
             $("#link" + id + j).attr('href', '/client/views/postDetails.html?id=' + postsContent[j].ID);
-            if(check)
-            {
+            if(check) {
               id = '0' + id;
             } 
             $('#thumbnail' + id + j).attr("src","../img/instagram_img/" + postsContent[j].image);
-           
             var postid = postsContent[j].ID;
             var likeCountTag = "popularity" + id + j;
-            
             var likeIconIDTag = "like" + id + j;
             isLike(postid, likeIconIDTag, likeIconIDTag);
             $('#like' + id + j).attr('onclick','likeClick("' + postid + '", "' + likeCountTag +'","' + likeIconIDTag + '")');
@@ -213,100 +209,81 @@ Duncan Robertson. Student number: 8074833 -->
         });
       }
       
-      //handle a click on the LIKE button we've included with each post
-      //we receive the ID of the post as a parameter
-      function likeClick(id, likeCounttag, likeIconTag){
+      /*handle a click on the LIKE button we've included with each post
+        we receive the ID of the post as a parameter */
+      function likeClick(id, likeCounttag, likeIconTag) {
         Promise.resolve()
-        .then(function(){
-              //here we pass the ID to the incrLike route on the server side so it can do the incrementing for us
-              //note the return. This MUST be here, or the subsequent then will not wait for this to complete
-            //  return $.post('/server/server.php', {id : id});
-             return $.post('/server/server.php', 'type=increLike' + '&id=' + id);
-          })
-          .then(function(like){
-              if (like.count > 0)
-              {
-                  //jQuery provides a nice convenience method for easily setting the count to the value returned
-                  $('#' + likeCounttag).html(like.count);
-              }
-              if (like.result)
-              {
-                  $('#' + likeIconTag).attr('src','../img/icons/Like.png');
-              }
-              else
-              {
-                 $('#' + likeIconTag).attr('src','../img/icons/icon2.png');
-              }
-          })
-          .catch(function(err){
-              //always include a catch for the promise chain
-              console.log(err);
-          });
+        .then(function() {
+            /*here we pass the ID to the incrLike route on the server side so it can do the incrementing for us
+            //note the return. This MUST be here, or the subsequent then will not wait for this to complete */
+           return $.post('/server/server.php', 'type=increLike' + '&id=' + id);
+        })
+        .then(function(like) {
+          if (like.count > 0) {
+            //jQuery provides a nice convenience method for easily setting the count to the value returned
+            $('#' + likeCounttag).html(like.count);
+          }
+          if (like.result) {
+            $('#' + likeIconTag).attr('src','../img/icons/Like.png');
+          }
+          else {
+            $('#' + likeIconTag).attr('src','../img/icons/icon2.png');
+          }
+        })
+        .catch(function(err) {
+            //always include a catch for the promise chain
+        });
       }
 
-      function isLike(postID, likeIconID)
-      {
+      function isLike(postID, likeIconID) {
         Promise.resolve()
-        .then(function(){
-        return $.post('/server/server.php', 'type=isLike' + '&id=' + postID);
-          })
-        .then(function(resonse){
-          if(resonse.result)
-          {
-            console.log("true")
-             $('#' + likeIconID).attr("src","../img/icons/Like.png");
+        .then(function() {
+          return $.post('/server/server.php', 'type=isLike' + '&id=' + postID);
+        })
+        .then(function(resonse) {
+          if(resonse.result) {
+            $('#' + likeIconID).attr("src","../img/icons/Like.png");
           }
         })
       }
       
-      //handle a click on the Follow button 
-      //we receive the ID of user as a parameter
-      function followerClick(followButtonID, followUserID){
-        console.log(followButtonID);
-        console.log(followUserID);
+      /*handle a click on the Follow button 
+        we receive the ID of user as a parameter */
+      function followerClick(followButtonID, followUserID) {
         Promise.resolve()
         .then(function(){
-         //     return $.post('incrFollow', {followid : followUserID});
-              return $.post('/server/server.php', 'type=incrFollow' + '&followid=' + followUserID);
-          })
-          .then(function(user){
-              if (user.followingCount > 0)
-              {
-                  $('#followingCount').html(user.followingCount);
-              }
-              if (user.result)
-              {
-                  $('#' + followButtonID).html('Following');
-              }
-              else
-              {
-                  $('#' + followButtonID).html('Follow');
-              }
-          })
-          .catch(function(err){
-              //always include a catch for the promise chain
-              console.log(err);
-          });
+          return $.post('/server/server.php', 'type=incrFollow' + '&followid=' + followUserID);
+        })
+        .then(function(user) {
+          if (user.followingCount > 0) {
+              $('#followingCount').html(user.followingCount);
+          }
+          if (user.result) {
+              $('#' + followButtonID).html('Following');
+          }
+          else {
+              $('#' + followButtonID).html('Follow');
+          }
+        })
+        .catch(function(err) {
+            //always include a catch for the promise chain
+        });
       }
       
       // Check whether the user is followed or not in order to display following button
-      function isFollow(followButtonID, followUserID)
-      {
+      function isFollow(followButtonID, followUserID) {
         Promise.resolve()
-         .then(function(){
-           // return $.post('isFollow', {followId : followUserID});
-            return $.post('/server/server.php', 'type=isFollow' + '&followid=' + followUserID);
-          })
-          // Display as following wehn
+        .then(function() {
+          return $.post('/server/server.php', 'type=isFollow' + '&followid=' + followUserID);
+        })
+        // Display as following 
         .then(function(response){
-          if(response.result)
-          {
-             $('#' + followButtonID).html('Following');
+          if(response.result) {
+           $('#' + followButtonID).html('Following');
           }
         })
       }
     </script>
-    
   </head>
   <body onload="loadPage();">
    
@@ -316,10 +293,10 @@ Duncan Robertson. Student number: 8074833 -->
       <!-- Header Section-->
       <header id="header" class="header"></header>
       <script> 
-      /*global $*/
-      $(function(){
-        $("#header").load("../templates/header.html");
-      });
+        /*global $*/
+        $(function() {
+          $("#header").load("../templates/header.html");
+        });
       </script> 
       
       <!-- Intro Section -->
@@ -341,19 +318,19 @@ Duncan Robertson. Student number: 8074833 -->
       <!-- Footer Section -->
       <footer id="footer"></footer>
       <script>
-      /*global $*/
-      $(function(){
-        $("#footer").load("../templates/footer.html"); 
-      });
+        /*global $*/
+        $(function() {
+          $("#footer").load("../templates/footer.html"); 
+        });
       </script> 
       
       <!-- Copyrights Section -->
       <div class="copyright" id="copyright"></div>
       <script> 
-      $(function(){
-        /*global $*/
-        $("#copyright").load("../templates/copyright.html"); 
-      });
+        $(function() {
+          /*global $*/
+          $("#copyright").load("../templates/copyright.html"); 
+        });
       </script> 
     </div>
   </body>
