--- a/client/views/postDetails.html
+++ b/client/views/postDetails.html
@@ -1,32 +1,35 @@
-<!-- Group information:
+<!-- 
+  Group information:
+  
+  Student 1:
+  
+  Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
+  
+  Student 2:
+  
+  Chi Hieu Tran (a.k.a Winson). Student number: 7822620
+  
+  Student 3:
+  
+  Saurav Bedi. Student number: 7832124 
+-->
 
-Student 1:
-
-Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
-
-Student 2:
-
-Chi Hieu Tran (a.k.a Winson). Student number: 7822620
-
-Student 3:
-
-Duncan Robertson. Student number: 8074833 -->
 <!doctype html>
 <html lang="en-US">
-<head>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <title>Post details</title>
-  <link rel="icon" href="http://www.webdesignerdepot.com/favicon.ico">
-  <link rel="stylesheet" type="text/css" href="../css/postDetails.css">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Wellfleet">
-  <!-- Adds CSS -->
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <title>Post details</title>
+    <link rel="icon" href="http://www.webdesignerdepot.com/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="../css/postDetails.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Wellfleet">
+    <!-- Adds CSS -->
     <link href="../css/instagramClone.css" rel="stylesheet" type="text/css">
-    
+      
     <!-- Adds JQuery -->
     <script src="../js/jquery-3.2.1.min.js"></script>
-  <script>
-    /*global $*/
-    function loadPage() {
+    <script>
+      /*global $*/
+      function loadPage() {
         var id = window.location.href.split("=")[1];
         Promise.resolve()
         .then(() => {
@@ -35,18 +38,18 @@ Duncan Robertson. Student number: 8074833 -->
         .then((post) => {
           setPostContent(post);
         })
-        
-      function setPostContent(post){
-        var postContent = post[0];
-        $('#status').html(postContent.status);
-        $('#hashTag').html(postContent.hashTag);
-        $('#image').attr("src","../img/instagram_img/" + postContent.image);
-        $('#likeCount').html(postContent.likeCount);
-        $('#feedbackCount').html(postContent.feedbackCount);
+          
+        function setPostContent(post) {
+          var postContent = post[0];
+          $('#status').html(postContent.status);
+          $('#hashTag').html(postContent.hashTag);
+          $('#image').attr("src","../img/instagram_img/" + postContent.image);
+          $('#likeCount').html(postContent.likeCount);
+          $('#feedbackCount').html(postContent.feedbackCount);
+        }
       }
-      }
-    </script>
-</head>
+      </script>
+  </head>
 
 <body onload="loadPage();">
   <div id="w">
