--- a/client/views/postList.html
+++ b/client/views/postList.html
@@ -1,16 +1,18 @@
-<!-- Group information:
-
-Student 1:
-
-Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
-
-Student 2:
-
-Chi Hieu Tran (a.k.a Winson). Student number: 7822620
-
-Student 3:
-
-Duncan Robertson. Student number: 8074833 -->
+<!-- 
+  Group information:
+  
+  Student 1:
+  
+  Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
+  
+  Student 2:
+  
+  Chi Hieu Tran (a.k.a Winson). Student number: 7822620
+  
+  Student 3:
+  
+  Saurav Bedi. Student number: 7832124 
+-->
 
 <!DOCTYPE html>
 <html>
@@ -28,7 +30,7 @@ Duncan Robertson. Student number: 8074833 -->
   
     <!-- JavaScript to load the contents of the page -->
     <script>
-    /*global $*/
+      /*global $*/
       // Function to load the contents of the page
       function loadPage() {
         var id = window.location.href.split("=")[1];
@@ -42,7 +44,7 @@ Duncan Robertson. Student number: 8074833 -->
       }
       
       // Function to set the user profile
-      function setUserProfile(post){
+      function setUserProfile(post) {
         var userProfile = post[0];
         $('#displayName').html(userProfile.displayName);
         $('#profileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
@@ -54,7 +56,7 @@ Duncan Robertson. Student number: 8074833 -->
       }
       
       // Function to add Gallery of user recent post to the Gallery Container
-      function addUserGallery(userProfile){
+      function addUserGallery(userProfile) {
         $('#galleryContainer').append('<div class="gallery">\
           <div class="gallery_upper">\
             <img src="" height="50px" class="profile" id="userProfileImage">\
@@ -71,14 +73,14 @@ Duncan Robertson. Student number: 8074833 -->
       }
       
       // Function to set content of User Upper Gallery
-      function setUserGalleryContent(userProfile){
+      function setUserGalleryContent(userProfile) {
         $('#userProfileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
         $('#userProfileUsername').html(userProfile.displayName);
         $('#userProfileFullName').html(userProfile.firstName + ' ' + userProfile.lastName);
       }
       
       // Function to add user Recent Posts html to Post Container
-      function addUserPosts(userProfile){
+      function addUserPosts(userProfile) {
         for (var j = 0; j < userProfile.postsCount; j++) {
           $('#postContainer' + userProfile.ID).append('<div class="thumbnail">\
               <a href="" id="link' + userProfile.ID + j + '">\
@@ -98,7 +100,7 @@ Duncan Robertson. Student number: 8074833 -->
       }
     
       // Function to set content of Posts
-      function setPostsContent(id, j, max){
+      function setPostsContent(id, j, max) {
         Promise.resolve()
         .then(() => {
           return $.post('/server/getPostsContent.php', {id: id, max: max});
@@ -122,51 +124,77 @@ Duncan Robertson. Student number: 8074833 -->
         });
       }
       
-      //handle a click on the LIKE button we've included with each post
-      //we receive the ID of the post as a parameter
-      function likeClick(id, likeCounttag, likeIconTag){
+      /*handle a click on the LIKE button we've included with each post
+        we receive the ID of the post as a parameter */
+      function likeClick(id, likeCounttag, likeIconTag) {
         Promise.resolve()
-        .then(function(){
-              //jQuery provides a nice convenience method for easily sending a post with parameters in JSON
-              //here we pass the ID to the incrLike route on the server side so it can do the incrementing for us
-              //note the return. This MUST be here, or the subsequent then will not wait for this to complete
-              return $.post('incrLike', {id : id});
-          })
-          .then(function(like){
-              if (like.count > 0)
-              {
-                  //jQuery provides a nice convenience methot for easily setting the count to the value returned
-                  $('#' + likeCounttag).html(like.count);
-              }
-              if (like.result)
-              {
-                  $('#' + likeIconTag).attr('src','../img/icons/Like.png');
-              }
-              else
-              {
-                 $('#' + likeIconTag).attr('src','../img/icons/icon2.png');
-              }
-          })
-          .catch(function(err){
-              //always include a catch for the promise chain
-              console.log(err);
-          });
+        .then(function() {
+            /*here we pass the ID to the incrLike route on the server side so it can do the incrementing for us
+            //note the return. This MUST be here, or the subsequent then will not wait for this to complete */
+           return $.post('/server/server.php', 'type=increLike' + '&id=' + id);
+        })
+        .then(function(like) {
+          if (like.count > 0) {
+            //jQuery provides a nice convenience method for easily setting the count to the value returned
+            $('#' + likeCounttag).html(like.count);
+          }
+          if (like.result) {
+            $('#' + likeIconTag).attr('src','../img/icons/Like.png');
+          }
+          else {
+            $('#' + likeIconTag).attr('src','../img/icons/icon2.png');
+          }
+        })
+        .catch(function(err) {
+            //always include a catch for the promise chain
+        });
+      }
+
+      function isLike(postID, likeIconID) {
+        Promise.resolve()
+        .then(function() {
+          return $.post('/server/server.php', 'type=isLike' + '&id=' + postID);
+        })
+        .then(function(resonse) {
+          if(resonse.result) {
+            $('#' + likeIconID).attr("src","../img/icons/Like.png");
+          }
+        })
       }
       
-      function isLike(postID, likeIconID)
-      {
+      /*handle a click on the Follow button 
+        we receive the ID of user as a parameter */
+      function followerClick(followButtonID, followUserID) {
         Promise.resolve()
         .then(function(){
-        return $.post('isLike', {id : postID});
-          })
-        .then(function(result){
-          if(result)
-          {
-            console.log("true")
-             $('#' + likeIconID).attr("src","../img/icons/Like.png");
+          return $.post('/server/server.php', 'type=incrFollow' + '&followid=' + followUserID);
+        })
+        .then(function(user) {
+          if (user.followingCount > 0) {
+              $('#followingCount').html(user.followingCount);
           }
-          else
-          {
+          if (user.result) {
+              $('#' + followButtonID).html('Following');
+          }
+          else {
+              $('#' + followButtonID).html('Follow');
+          }
+        })
+        .catch(function(err) {
+            //always include a catch for the promise chain
+        });
+      }
+      
+      // Check whether the user is followed or not in order to display following button
+      function isFollow(followButtonID, followUserID) {
+        Promise.resolve()
+        .then(function() {
+          return $.post('/server/server.php', 'type=isFollow' + '&followid=' + followUserID);
+        })
+        // Display as following 
+        .then(function(response){
+          if(response.result) {
+           $('#' + followButtonID).html('Following');
           }
         })
       }
@@ -180,10 +208,10 @@ Duncan Robertson. Student number: 8074833 -->
       <!-- Header Section-->
       <header id="header" class="header"></header>
       <script> 
-      /*global $*/
-      $(function(){
-        $("#header").load("../templates/header.html");
-      });
+        /*global $*/
+        $(function() {
+          $("#header").load("../templates/header.html");
+        });
       </script> 
       
       <!-- Intro Section -->
@@ -205,20 +233,19 @@ Duncan Robertson. Student number: 8074833 -->
       <!-- Footer Section -->
       <footer id="footer"></footer>
       <script>
-      /*global $*/
-      $(function(){
-        $("#footer").load("../templates/footer.html"); 
-      });
-      
+        /*global $*/
+        $(function() {
+          $("#footer").load("../templates/footer.html"); 
+        });
       </script> 
       
       <!-- Copyrights Section -->
       <div class="copyright" id="copyright"></div>
       <script> 
-      $(function(){
-        /*global $*/
-        $("#copyright").load("../templates/copyright.html"); 
-      });
+        $(function() {
+          /*global $*/
+          $("#copyright").load("../templates/copyright.html"); 
+        });
       </script> 
     </div>
   </body>
