--- a/client/views/error.html
+++ b/client/views/error.html
@@ -25,6 +25,10 @@
     
     <!-- Add JQuery -->
     <script src="../js/jquery-3.2.1.min.js"></script>
+    
+    <!-- Adds Moon -->
+    <script src="https://unpkg.com/moonjs"></script>
+    
     <script>
       function loadPage(){
         var msg = '';
