--- a/client/views/forgotPassword.html
+++ b/client/views/forgotPassword.html
@@ -26,6 +26,10 @@
 		<link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
 	    <script src="../js/jquery-3.2.1.min.js"></script>
 	    <script src="../js/bootstrap.min.js"></script>
+	    
+	    <!-- Adds Moon -->
+    	<script src="https://unpkg.com/moonjs"></script>
+    
 		<script>
 	        /*global $*/
 	        $(document).ready( ()=> {
