--- a/client/views/postDetails.html
+++ b/client/views/postDetails.html
@@ -27,6 +27,10 @@
       
     <!-- Adds JQuery -->
     <script src="../js/jquery-3.2.1.min.js"></script>
+    
+    <!-- Adds Moon -->
+    <script src="https://unpkg.com/moonjs"></script>
+    
     <script>
       /*global $*/
       function loadPage() {
