--- a/client/views/postList.html
+++ b/client/views/postList.html
@@ -27,6 +27,9 @@
     
     <!-- Adds JQuery -->
     <script src="../js/jquery-3.2.1.min.js"></script>
+    
+    <!-- Adds Moon -->
+    <script src="https://unpkg.com/moonjs"></script>
   
     <!-- JavaScript to load the contents of the page -->
     <script>
