--- a/client/views/upload.html
+++ b/client/views/upload.html
@@ -27,6 +27,10 @@
 		<script src="../js/jquery-3.2.1.min.js"></script>
 		<script src="../js/plupload.full.js"></script>
 		<script src="../js/jquery-progressbar.min.js"></script>
+		
+		<!-- Adds Moon -->
+    	<script src="https://unpkg.com/moonjs"></script>
+    
 		<script>
 			/* global $ */
 			/* global plupload */
